--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "jest": "^29.7.0",
     "mongoose": "^8.13.2",
     "socket.io": "^3.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "coverage": true
   }
 }
